--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             </button>
           </div>
           <div v-else>
-            <button class="btn" @click="reset">Начать заново</button>
+            <button class="btn" @click="reset">Начать заного</button>
           </div>
         </div>
       </div>
